--- a/views/chart.ejs
+++ b/views/chart.ejs
@@ -24,6 +24,8 @@
 
     <body>
         <div id="container" style="height: 400px; min-width: 310px"></div>
+        <div id="container1" style="height: 400px; min-width: 310px"></div>
+        <div id="container2" style="height: 400px; min-width: 310px"></div>
         <script src="/js/papa.js">s</script>
     </body>
 </html>
